[package]
name = "low-battery"
version = "1.0.0"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
battery = "0.7.6"
notify-rust = "4.0.0"
color-eyre = { version = "0.5.5", default-features = false }
cronjob = "0.3.17"
